Updated NFA code to follow 1.8